# robocup-ai

./: .gitignore  Actions.docx  README.md
src/GR_sim_netoworking/: GR_Interact.py  Robot.py
src/GR_sim_networking/: GR_Interact.py  README  Robot_Interact.py  Robot_Interact_Test.py  __init__.py  ball.py  motor_conversions.py  recv_udp.py
src/GR_sim_networking/proto/: README  __init__.py  grSim_Commands.proto  grSim_Commands_pb2.py  grSim_Packet.proto  grSim_Packet_pb2.py  grSim_Replacement.proto  grSim_Replacement_pb2.py  messages_robocup_ssl_detection_pb2.py  messages_robocup_ssl_geometry_pb2.py  messages_robocup_ssl_refbox_log_pb2.py  messages_robocup_ssl_wrapper_pb2.py  referee_pb2.py  savestate_pb2.py
src/action_selection/: CMakeLists.txt  package.xml
src/basic_skills/: CMakeLists.txt  TODO.txt  __init__.py  action.py  action_sequence.py  helper_functions.py  package.xml  robot.py  setup.py  testing_loop.py
src/basic_skills/Goalie/: Goalie.py  test_Goalie.py
src/basic_skills/ball_interception/: Ball_Interception.py  Ball_Interception1.py  Ball_Interception2.py  Ball_Interception_orbit_ball_might_just_be_better.py  Catch_Pygym.py  Catch_gym.py  README.txt  __init__.py  architecture6.py  continuos_actions10_18.py  test_ball_interception.py
src/basic_skills/basic_defense/: bot.py  defendBot.py  predictions.py
src/basic_skills/cover/: README.txt  __init__.py  cover.py  test_cover.py
src/basic_skills/dribble_ball/: __init__.py  backup.txt  dribble_ball.py  test_dribble_ball.py
src/basic_skills/get_open/: README.txt  get_open.py  get_open1.py  get_open2.py  get_open3.py  get_open5.py  get_open_1-9-2019.py  get_open_nathan.py  get_open_with_ball.py  test_get_open.py
src/basic_skills/handle_ball/: handle_ball.py
src/basic_skills/kick/: README.txt  ball_orbit.py  kick.py  move_to.py  test_kick.py
src/basic_skills/move_to/: README  __init__.py  move_to.py  move_to_collisions.py  test_move_to.py  test_move_to_PySim.py
src/basic_skills/orbit_ball/: README.txt  __init__.py  orbit_ball.py  test_orbit_ball.py
src/basic_skills/pass_to/: pass_to.py
src/basic_skills/rrt/: __init__.py  matplotPractice.py  rrt.py  rrtClient.py  test_rrt.py
src/basic_skills/saved_models/: README.txt
src/basic_skills/scripts/: train_ball_control.py
src/basic_skills/source/: Ball_Interception.py  DribbleBall.py  GetOpen.py  Goalie.py  InterceptBall.py  MoveTo.py  OrbitBall.py  PassTo.py  action.py  ball.py  cover.py  dribble_ball.py  get_open.py  helper_functions.py  move_to_no_collision.py  orbit_ball.py  pass_to.py  robot.py  worst_intercept.py
src/basic_skills/src/basic_skills/: Goalie.py  __init__.py  action.py  action_sequence.py  dribble_ball.py  move_to.py  move_to_no_collision_avoidance.py  orbit_ball.py  robot.py  shoot.py
src/basic_skills/tests/: Catch_Pygym.py  TestCover.py  TestDribbleBall.py  TestGetOpen.py  TestGetOpenBlue.py  TestGoalie.py  TestInterceptBall.py  TestMoveTo.py  TestOrbitBall.py  TestPassTo.py  test_Goalie.py  test_MoveTo.py  test_ball_interception.py  test_cover.py  test_dribble_ball.py  test_get_open.py  test_move_to_PySim.py  test_orbit_ball.py  test_pass_to.py  test_shoot.py
src/coach/: CMakeLists.txt  package.xml
src/coach/launch/: coach.launch
src/coach/msg/: Strategy.msg
src/coach/scripts/: coach.py
src/player/: CMakeLists.txt  package.xml
src/player/launch/: player.launch
src/player/scripts/: player.py  player_listener.py
src/player/src/: __init__.py  player.py  robot.py
src/pygame_simulator/: GR_Interact.py  PySim.py  PySim_noise.py  PySim_old.py  README.txt  __init__.py  ball.py  test_PySim_noise.py  test_PySim_noise.txt
src/pysim/: CMakeLists.txt  package.xml  setup.py
src/robocup_control/: CMakeLists.txt  drive_controller_plugins.xml  package.xml
src/robocup_control/config/: player_control.yaml  player_hw.yaml  player_joint_limits.yaml
src/robocup_control/include/robocup_control/: drive_controller.h  dummy_service.h  player_control_loop.h  player_hw_interface.h  sim_spi_service.h
src/robocup_control/launch/: player_control.launch  test.launch
src/robocup_control/proto/: grSim_Data.proto
src/robocup_control/src/: drive_controller.cpp  dummy_pose_pub.cpp  dummy_service.cpp  dummy_thread.cpp  main.cpp  player_control_loop.cpp  player_controller_async.cpp  player_hw_interface.cpp  sim_spi_service.cpp  sim_spi_thread.cpp  test.cpp
src/robocup_control/srv/: Data.srv  Insn.srv
src/robocup_master/: CMakeLists.txt  package.xml  setup.py
src/robocup_master/config/: derp.place  derp.traj  sample.place  sample.traj
src/robocup_msgs/: CMakeLists.txt  package.xml
src/robocup_msgs/msg/: Position.msg  Strategy.msg
src/sensing/: CMakeLists.txt  package.xml
src/sensing/msg/: Position.msg
src/sensing/proto/: grSim_Packet_pb2.py  messages_robocup_ssl_geometry_legacy_pb2.py  messages_robocup_ssl_refbox_log_pb2.py  messages_robocup_ssl_wrapper_legacy_pb2.py  messages_robocup_ssl_wrapper_pb2.py
src/sensing/scripts/: messages_robocup_ssl_wrapper_pb2.py  sim_receiver.py  sim_sender.py  ssl_vision_publisher.py  sslclient.py  test_ssl_listen.py  test_ssl_publish.py
src/sensor_processing/: CMakeLists.txt  package.xml  setup.py
src/sensor_processing/msg/: BallData.msg  FieldData.msg  PlayerData.msg
src/sensor_processing/scripts/: est_covariance.py  ssl_vision.py  ssl_vision_node.py
src/skill_execution/: CMakeLists.txt  package.xml  setup.py
src/skill_execution/tests/: test_cover.py  test_get_open.py
src/strategy_execution/: CMakeLists.txt  README.txt  SimpleStrategyNathan.py  defensive_strategy.py  evaluate_robots.py  heuristic_debug.py  neutral_strategy.py  offensive_strategy.py  package.xml  passing_strategy.py  simple_strategy.py  simple_strategy_nathan.py  simple_strategy_nathan_state_machine.py  state_machine.py  strategy_helpers.py  strategy_numbers.py
src/strategy_execution/old/: assign_closest.py  simple_strategy.py  simple_strategy1.py  simple_strategy2.py  simple_strategy3.py
src/strategy_execution/src/: Strategy.py
src/strategy_selection/: CMakeLists.txt  package.xml
(+23 files in other folders)
