<?xml version="1.0"?>
<package format="2">
  <name>coach</name>
  <version>0.0.0</version>
  <description>The coach package receives game data from the SSL Vision node and sends strategies to the palyers.</description>
  <maintainer email="hrinn@calpoly.edu">hrinn</maintainer>
  <license>MIT</license><exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>strategy_selection</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robocup_msgs</build_depend>
  <build_export_depend>strategy_selection</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>robocup_msgs</build_export_depend>
  <exec_depend>strategy_selection</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robocup_msgs</exec_depend>
  <export>

  </export>
</package>
