<?xml version="1.0"?>
<package format="2">
  <name>player</name>
  <version>0.0.0</version>
  <description>The player package receives game data from the SSL Vision node and Coach node.</description>

  <maintainer email="awong189@calpoly.edu">hrinn</maintainer>

  <license>MIT</license>

  <exec_depend>message_runtime</exec_depend>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>strategy_selection</build_depend>
  <build_depend>coach</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robocup_msgs</build_depend>
  
  <build_export_depend>strategy_selection</build_export_depend>
  <build_export_depend>coach</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>robocup_msgs</build_export_depend>

  <exec_depend>strategy_selection</exec_depend>
  <exec_depend>coach</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robocup_msgs</exec_depend>
</package>
